fix scrollbar #1

--- a/core/less/common/ev-panels.less
+++ b/core/less/common/ev-panels.less
@@ -75,6 +75,7 @@
 
     div[ui-view] {
         height: 100%;
+        position: relative;
     }
 
     &[data-breakpoint~="100"],
